@startuml
class ContaCorrente{
    - numeroConta : int
    - nome : String
    - saldo : double
    - status : boolean
    + deposito(valor:double) : void
    + saque(valor:double) : void
    + transfere(contaDestino : ContaCorrente, valor : double) : void
}
class Extrato{
    - dataHora : LocalDateTime
    - operacao : String
    - valor : double
}

class agenciaBancaria{
    - numero : int
    - nome : String
}

ContaCorrente "0" --> "*" Extrato
ContaCorrente --> ContaCorrente : transfere
agenciaBancaria "0"--> "*" ContaCorrente : gerencia
@enduml
